Update and refactor index.html

--- a/index.html
+++ b/index.html
@@ -36,19 +36,18 @@
 
 <div class="container container-flex">
   <main role="main">
-    <article class="article-featured">
+    <article class="article-featured" id="article-featured">
       <h2 class="article-title">Finding simplicity in life</h2>
       <img
         src="static/img/life.jpg"
         alt="A plant on the table with a study lamp and a wall clock"
-        class="article-image"
+        class="article-image object-position-bottom"
       >
       <p class="article-info">July 23, 2019 | 3 comments</p>
       <p class="article-body">
-        <strong>Life can get complicated really quickly</strong>, but it doesn't have to be!
-        There are many ways to simplify your life, <a href="#">a few of which we've explored in the past</a>.
-        This week we're taking a bit of an approach though, in how you can find simplicity in the life you already
-        living.
+        <strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to
+        simplify your life, <a href="#article-featured">a few of which we've explored in the past</a>.This week we're
+        taking a bit of an approach though, in how you can find simplicity in the life you already living.
       </p>
       <a href="#" class="article-read-more">continue reading</a>
     </article>
@@ -108,7 +107,7 @@
         <img
           src="static/img/deco.jpg"
           alt="A plant in a bottle with water"
-          class="article-image"
+          class="article-image object-position-left"
         >
         <p class="article-info">July 3, 2019 | 3 comments</p>
       </div>
@@ -131,7 +130,9 @@
     <div class="sidebar-widget">
       <h2 class="widget-title">Recent Posts</h2>
       <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">Keeping cooking simple</h3>
+        <h3 class="widget-recent-post-title">
+          <a href="#">Keeping cooking simple</a>
+        </h3>
         <img
           src="static/img/food.jpg"
           alt="A japanese food in a bowl and a chopstick"
@@ -139,7 +140,9 @@
         >
       </div>
       <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">Simplicity and work</h3>
+        <h3 class="widget-recent-post-title">
+          <a href="#">Simplicity and work</a>
+        </h3>
         <img
           src="static/img/work.jpg"
           alt="A simple table with desk and a chair"
@@ -147,11 +150,13 @@
         >
       </div>
       <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">Simple decorations</h3>
+        <h3 class="widget-recent-post-title">
+          <a href="#">Simple decorations</a>
+        </h3>
         <img
           src="static/img/deco.jpg"
           alt="A plant in a bottle with water"
-          class="widget-image"
+          class="widget-image object-position-left"
         >
       </div>
     </div>
