--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </article>
   </main>
 
-  <aside class="sidebar">
+  <aside class="sidebar" id="sidebar">
     <div class="sidebar-widget">
       <h2 class="widget-title">About Me</h2>
       <img
@@ -127,38 +127,8 @@
       </p>
     </div>
 
-    <div class="sidebar-widget">
+    <div class="sidebar-widget" id="widget-recent-posts">
       <h2 class="widget-title">Recent Posts</h2>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Keeping cooking simple</a>
-        </h3>
-        <img
-          src="static/img/food.jpg"
-          alt="A japanese food in a bowl and a chopstick"
-          class="widget-image"
-        >
-      </div>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Simplicity and work</a>
-        </h3>
-        <img
-          src="static/img/work.jpg"
-          alt="A simple table with desk and a chair"
-          class="widget-image"
-        >
-      </div>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Simple decorations</a>
-        </h3>
-        <img
-          src="static/img/deco.jpg"
-          alt="A plant in a bottle with water"
-          class="widget-image object-position-left"
-        >
-      </div>
     </div>
   </aside>
 </div>
@@ -166,5 +136,6 @@
 <footer>
   <p>&copy; 2022 <strong>Living the simple life</strong></p>
 </footer>
+<script src="static/js/script.js"></script>
 </body>
 </html>
