Remove static data, import javascript

--- a/about-me.html
+++ b/about-me.html
@@ -76,39 +76,9 @@
     </p>
   </main>
 
-  <aside class="sidebar">
-    <div class="sidebar-widget">
+  <aside class="sidebar" id="sidebar">
+    <div class="sidebar-widget" id="widget-recent-posts">
       <h2 class="widget-title">Recent Posts</h2>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Keeping cooking simple</a>
-        </h3>
-        <img
-          src="static/img/food.jpg"
-          alt="Two dumplings on a wood plate with chopsticks"
-          class="widget-image"
-        >
-      </div>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Simplicity and work</a>
-        </h3>
-        <img
-          src="static/img/work.jpg"
-          alt="A white chair at a white desk on a white wall"
-          class="widget-image"
-        >
-      </div>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Simple decorations</a>
-        </h3>
-        <img
-          src="static/img/deco.jpg"
-          alt="A green plant in a clear, round vase with water in it"
-          class="widget-image object-position-left"
-        >
-      </div>
     </div>
   </aside>
 </div>
@@ -117,5 +87,6 @@
 <footer>
   <p>&copy; 2022 <strong>Living the simple life</strong></p>
 </footer>
+<script src="static/js/script.js"></script>
 </body>
 </html>
