--- a/recent-posts.html
+++ b/recent-posts.html
@@ -35,90 +35,9 @@
 </header>
 
 <div class="container container-flex">
-  <main role="main">
-    <article class="article-recent">
-      <div class="article-recent-main">
-        <h2 class="article-title">Finding simplicity in life</h2>
-        <p class="article-body">
-          <strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to
-          simplify your life, <a href="#">a few of which we've explored in the past</a>. This week we're
-          taking a bit of an approach though, in how you can find simplicity in the life you already living.
-        </p>
-        <a href="#" class="article-read-more">continue reading</a>
-      </div>
-      <div class="article-recent-secondary">
-        <img
-          src="static/img/life.jpg"
-          alt="Simple white desk on a white wall with a plant on the far right side"
-          class="article-image"
-        >
-        <p class="article-info">July 23, 2019 | 3 comments</p>
-      </div>
-    </article>
+  <main role="main" id="main"></main>
 
-    <article class="article-recent">
-      <div class="article-recent-main">
-        <h2 class="article-title">Keeping cooking simple</h2>
-        <p class="article-body">
-          Food is a very important part of everyone's life. If you want to be healthy,
-          you have to eat healthy. One of the easiest ways to do that is to keep your cooking nice and simple.
-        </p>
-        <a href="#" class="article-read-more">continue reading</a>
-      </div>
-      <div class="article-recent-secondary">
-        <img
-          src="static/img/food.jpg"
-          alt="A japanese food in a bowl and a chopstick"
-          class="article-image"
-        >
-        <p class="article-info">July 19, 2019 | 3 comments</p>
-      </div>
-    </article>
-
-    <article class="article-recent">
-      <div class="article-recent-main">
-        <h2 class="article-title">Simplicity and work</h2>
-        <p class="article-body">
-          Work is often a major source of stress. People get frustrated,
-          it ruins their relationship with others and it leads to burnout.
-          By keeping your work life as simple as possible,
-          it will help balance everything out.
-        </p>
-        <a href="#" class="article-read-more">continue reading</a>
-      </div>
-      <div class="article-recent-secondary">
-        <img
-          src="static/img/work.jpg"
-          alt="A simple table with desk and a chair"
-          class="article-image"
-        >
-        <p class="article-info">July 12, 2019 | 3 comments</p>
-      </div>
-    </article>
-
-    <article class="article-recent">
-      <div class="article-recent-main">
-        <h2 class="article-title">Simple decorations</h2>
-        <p class="article-body">
-          A home isn't a home until you've decorated a little. People either don't decorate,
-          or they go overboard and it doesn't have the impact they were hoping for.
-          Staying simple will help draw the eye where you want it to
-          and make things pop like never before.
-        </p>
-        <a href="#" class="article-read-more">continue reading</a>
-      </div>
-      <div class="article-recent-secondary">
-        <img
-          src="static/img/deco.jpg"
-          alt="A plant in a bottle with water"
-          class="article-image object-position-left"
-        >
-        <p class="article-info">July 3, 2019 | 3 comments</p>
-      </div>
-    </article>
-  </main>
-
-  <aside class="sidebar">
+  <aside class="sidebar" id="sidebar">
     <div class="sidebar-widget">
       <h2 class="widget-title">About Me</h2>
       <img
@@ -131,38 +50,8 @@
       </p>
     </div>
 
-    <div class="sidebar-widget">
+    <div class="sidebar-widget" id="widget-recent-posts">
       <h2 class="widget-title">Recent Posts</h2>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Keeping cooking simple</a>
-        </h3>
-        <img
-          src="static/img/food.jpg"
-          alt="A japanese food in a bowl and a chopstick"
-          class="widget-image"
-        >
-      </div>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Simplicity and work</a>
-        </h3>
-        <img
-          src="static/img/work.jpg"
-          alt="A simple table with desk and a chair"
-          class="widget-image"
-        >
-      </div>
-      <div class="widget-recent-post">
-        <h3 class="widget-recent-post-title">
-          <a href="#">Simple decorations</a>
-        </h3>
-        <img
-          src="static/img/deco.jpg"
-          alt="A plant in a bottle with water"
-          class="widget-image object-position-left"
-        >
-      </div>
     </div>
   </aside>
 </div>
@@ -170,5 +59,6 @@
 <footer>
   <p>&copy; 2022 <strong>Living the simple life</strong></p>
 </footer>
+<script src="static/js/script.js"></script>
 </body>
 </html>
